fix responsiveness issue with squashed colums by adding media query break1000

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,28 +121,13 @@ input[type=submit]:hover {
     background-color: #307934;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 1000px) {
 
 
-    .heroimage {
-        background: url(../images/hero.png) no-repeat center;
-        height: 300px;
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center center;
-        padding: 0;
+    .contactrow {
+        display: flexbox;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
 
-    .heroimagecontact {
-
-        background: url(../images/heroimage2.png) no-repeat center;
-        background-size: 80%;
-        height: 600px;
-    }
-
-    .heroaccom {
-        background: url(../images/accomodation.png) no-repeat center;
-        background-size: 80%;
-        height: 600px;
-    }
 }
